--- a/xsolution/public/index.html
+++ b/xsolution/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="../src/img/icons/mini_logo.svg">
+    <link rel="shortcut icon" href="./mini_logo.svg" type="image/x-icon">
     <title>X-Solution - Личный кабинет</title>
   </head>
   <body>
